<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ServiceKiller</string>
    <string name="action_add">Add</string>
    <string name="action_selectall">Select all</string>
    <string name="action_remove">Remove</string>
    <string name="action_kill">Kill</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_app_grid">Select Apps</string>
    <string name="progressbar_loading">loading...</string>
    
    <string name="title_select_item">Select Items</string>
    <plurals name="sub_title_select_item">
        <item quantity="one">One item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>

    <string name="content_empty_list">No data. Please add some data first ^^</string>
    
    <string-array name="init_apps">
        <item >com.tencent.mm</item>
        <item >com.tencent.mobileqq</item>
        <item >com.eg.android.AlipayGphone</item>
    </string-array>
    
</resources>
