<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_kill"
        android:icon="@drawable/ic_kill"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/action_kill"/>
    
    <item 
        android:id="@+id/action_selectall"
        android:icon="@drawable/ic_select_all"
        android:orderInCategory="11"
        android:showAsAction="ifRoom"
        android:title="@string/action_selectall"/>
    
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="12"
        android:showAsAction="never"
        android:title="@string/action_add"/>
    
    <item 
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_remove"
        android:orderInCategory="13"
        android:showAsAction="never"
        android:title="@string/action_remove"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
<!--     <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_about"/> -->

</menu>
